crates/tui/snapshots/fullscreen/home/home_short.snap
---
source: crates/tui/src/app/fullscreen/home_tests.rs
expression: text(&buffer)
---
  .                        [Dashboard]  
                                        
  ╭──────────────────────────────────╮  
  │  Ash Code v0.1.0                 │  
  │> Quit                            │  
  ╰──────────────────────────────────╯  
             Type a task · Tab actions  
  ────────────────────────────────────  
  > Build anything                      
  ─────────────────── Automatic model   
                                        
  Enter select · Esc input
