crates/tui/snapshots/fullscreen/home/home_submission_failed.snap
---
source: crates/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Could not create session                                                      
  ────────────────────────────────────────────────────────────────────────────  
  > [Pasted Content 1500 chars]                                                 
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual
